# Sophon.py

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_DOWNLOAD_PATCH.md  COMPLETION_SUMMARY.txt  COMPREHENSIVE_TEST_REPORT.md  FINAL_DELIVERY.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: README.md  build.yml  ci.yml  lint.yml  publish.yml  tests.yml  type-check.yml
docs/: API_Asset.md  API_Manifest.md  API_Patch.md  API_Update.md  GETTING_STARTED.md  USAGE.md  index.md
examples/: __init__.py  apply_update.py  basic_manifest_fetch.py  download_assets.py
sophon/: __init__.py  asset.py  chunk.py  exceptions.py  manifest.py  patch.py  speed_limiter.py  update.py
sophon/helper/: __init__.py  extensions.py  progress.py
sophon/proto/: SophonManifestProto_pb2.py  SophonManifestProto_pb2.pyi  SophonPatchProto_pb2.py  SophonPatchProto_pb2.pyi  __init__.py
sophon/types/: __init__.py  chunks_info.py  info_pair.py  manifest_info.py  progress_info.py
tests/: __init__.py  test_asset.py  test_chunk.py  test_comprehensive.py  test_integration.py  test_manifest.py  test_patch_integration.py  test_zstd.py
